# splinter

./: .gitignore  CHANGELOG.rst  Cargo.toml  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json  packages.repos
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deb-package.yml
doc/vhs/: README.md  splinter-graph.tape  splinter-publishing.tape  splinter-service.tape  splinter-states.tape
src/: dev_node.rs  lib.rs  ros2tui.rs  splinter.rs
src/common/: app.rs  dynamic_message_selection.rs  event.rs  generic_message.rs  generic_message2.rs  generic_message_selection.rs  generic_message_selector.rs  message_definition.rs  mod.rs  selectable.rs  style.rs  utils.rs
src/common/generic_message2/: generic_value.rs
src/connections/: mod.rs  ros2.rs
src/popups/: add_hz_popup.rs  add_line_popup.rs  error_popup.rs  mod.rs  new_field_popup.rs  new_node_popup.rs  new_topic_popup.rs  text_popup.rs
src/verbs/: mod.rs  ros2.rs
src/views/: hz_plot.rs  live_plot.rs  message_editor.rs  message_pane.rs  mod.rs  node_details.rs  node_list.rs  raw_message.rs  service_call.rs  state_graph.rs  topic_graph.rs  topic_list.rs  topic_publisher.rs
src/views/node_details/: interface_list_item.rs
src/widgets/: edit_value_widget.rs  list_widget.rs  live_plot.rs  message_editor.rs  message_widget.rs  mod.rs  node_list.rs  parameter_list_widget.rs  raw_message.rs  select_view_widget.rs  state_graph_widget.rs  topic_list.rs  topic_list_widget.rs  topic_publisher.rs
src/widgets/message_widget/: array_widget.rs  bounded_sequence_widget.rs  sequence_widget.rs  value_widget.rs
tools/: autonomous_nav.py  packages.repos  ros2tui_install.sh  splinter_install.sh  test_scenario.launch.py
