[package]
name = "ros2tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { git = "https://github.com/Yomguithereal/ratatui", branch = "fix-334" }
futures = "*"
serde = "*"
tokio = { version = "1", features = ["full"] }
cdr = "*"
color-eyre = "0.6.3"
crossterm = "0.28.1"
mcap = "0.22.0"
clap = { version = "4.5.40", features = ["derive"] }
memmap2 = "0.9.5"
rclrs = { version = "*", features = ["dyn_msg"] }
indexmap = "*"
enum_dispatch = "*"
std_msgs = "*"
anyhow = "*"
rosidl_runtime_rs = "*"

[lib]
name = "ros2tui"
path = "src/lib.rs"

[[bin]]
name = "ros2tui"
path = "src/ros2tui.rs"
