[package]
name = "splinter"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { git = "https://github.com/Yomguithereal/ratatui", branch = "fix-334" }
color-eyre = "0.6.3"
crossterm = "0.28.1"

clap = { version = "4.5.40", features = ["derive"] }

rclrs = { version = "*", features = ["dyn_msg"] }
rosidl_runtime_rs = "*"
rcl_interfaces = "*"

indexmap = "2.11.1"
enum_dispatch = "0.3.13"

std_msgs = "*"
test_msgs = "*"

[lib]
name = "splinter"
path = "src/lib.rs"

[[bin]]
name = "splinter"
path = "src/splinter.rs"

[[bin]]
name = "dev_node"
path = "src/dev_node.rs"
