<package format="3">
  <name>splinter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>

  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>