<package format="3">
  <name>splinter</name>
  <version>0.1.0</version>
  <description>A terminal user interface for ROS 2 topics and nodes.</description>
  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>
  <license>Apache-2.0</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>

  <test_depend>test_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>